#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package ImgAlgos
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-91
2015-07-91 Mikhail S. Dubrovin
- For Python-to-C++ project modules cleen-up code, sort-out print-out info, update documentation (PSAS-147)

Tag: V00-03-90
2015-07-27 Igor Gaponenko
- fixed bugs uncovered during RHEL7 migration (JIRA PSRT-63)

Tag: V00-03-89
2015-07-27 Mikhail S. Dubrovin
- 1-st working versions of peakfinder and dropletfinder (PSAS-147)
- Add classes for Python-to-C++ algorithms, modify SConscript (PSAS-147)
  - new and modified modules: AlgImgProc, AlgArrProc, Window, examples/*, src/__init__.py, PyAlgos.py, pyext/pyImgAlgos.cpp
- Move struct TwoIndexes from a few classes to to GlobalMethods.h
  - affected modules: ImgPeakFinderAB.h, ImgMaskEvaluation.h, CSPadArrPeakFinder.h, EpixNDArrProducer.cpp

Tag: V00-03-88
2015-06-08 Mikhail S. Dubrovin
- add class CommonModeCorrection, which is used to apply CommonMode algorithms (PSAS-139)
	
Tag: V00-03-87
2015-05-16 Mikhail S. Dubrovin
- NDArrDropletFinder.h - fix bug in evaluation of m_stride for NDim=2

Tag: V00-03-86
2015-05-04 Mikhail S. Dubrovin
- NDArrAverage - add parameter thr_rms_min (PSAS-6)
	
Tag: V00-03-85
2015-05-01 Mikhail S. Dubrovin
- GlobalMethods - add method stringForDetType, add const in detectorTypeForSource
	
Tag: V00-03-84
2015-04-24 Mikhail S. Dubrovin
- NDArrDropletFinder - add parameters mask and masked_value (PSAS-68)
	
Tag: V00-03-83
2015-04-14 Mikhail S. Dubrovin
- NDArrCalib - add method printMaskAndBkgd(), use m_is_done_once as member data in stead of static
	
Tag: V00-03-82
2015-03-20 Mikhail S. Dubrovin